--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "author": "Andrey Borisenko <andrey.borisenko23@gmail.com>",
   "private": true,
   "scripts": {
+    "heroku-postbuild": "yarn build",
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
-    "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "start": "cross-env NODE_ENV=production node build/main.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
