--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js"
+    "start": "cross-env NODE_ENV=production node build/main.js",
+    "heroku-postbuild": "yarn start"
   },
   "dependencies": {
     "axios": "^0.16.2",
