--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
-    "heroku-postbuild": "yarn start"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.16.2",
