--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
-    "heroku-postbuild": "npm run build"
+    "start": "cross-env NODE_ENV=production node build/main.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
