--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15"
-  },
-  "devDependencies": {
+    "source-map-support": "^0.4.15",
     "babel-eslint": "^7.2.3",
     "backpack-core": "^0.4.1",
     "eslint": "^4.3.0",
@@ -33,5 +31,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "devDependencies": {
   }
 }
