--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js"
+    "start": "cross-env NODE_ENV=production node build/main.js",
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -31,7 +32,5 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
-  },
-  "devDependencies": {
   }
 }
